--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,16 +7,65 @@
     android:background="#f5ffd6"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/TemporaryDisplay"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello User!"
-        android:textSize="40sp"
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="412dp"
+        android:layout_height="58dp"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.45" />
+        app:layout_constraintVertical_bias="0.023">
+
+        <Button
+            android:id="@+id/PrevButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#40DFFF"
+            android:insetLeft="10dp"
+            android:insetRight="10dp"
+            android:text="PREV"
+            android:textColor="@color/black" />
+
+        <Button
+            android:id="@+id/NextButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#40DFFF"
+            android:insetLeft="10dp"
+            android:insetRight="10dp"
+            android:text="NEXT"
+            android:textColor="@color/black" />
+
+        <EditText
+            android:id="@+id/PageNumber"
+            android:layout_width="70dp"
+            android:layout_height="50dp"
+            android:ems="10"
+            android:inputType="number"
+            android:text="1"
+            android:textAlignment="center" />
+
+        <Button
+            android:id="@+id/GoButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#40DFFF"
+            android:insetLeft="10dp"
+            android:insetRight="10dp"
+            android:text="GO"
+            android:textColor="@color/black" />
+    </LinearLayout>
+
+    <ListView
+        android:id="@+id/ListName"
+        android:layout_width="417dp"
+        android:layout_height="531dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        app:layout_constraintVertical_bias="1.0" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
