--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,13 +25,13 @@
         app:layout_constraintVertical_bias="0.265" />
 
     <EditText
-        android:id="@+id/UsernameBox"
+        android:id="@+id/EmailBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textEmailAddress"
         android:minHeight="48dp"
-        android:text="Username"
+        android:hint="Email"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,7 +47,7 @@
         android:ems="10"
         android:inputType="textVisiblePassword"
         android:minHeight="48dp"
-        android:text="Password"
+        android:hint="Password"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
