--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
             android:id="@+id/PrevButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="#40DFFF"
+            android:backgroundTint="#98ED89"
             android:insetLeft="10dp"
             android:insetRight="10dp"
             android:text="PREV"
@@ -31,7 +31,7 @@
             android:id="@+id/NextButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="#40DFFF"
+            android:backgroundTint="#98ED89"
             android:insetLeft="10dp"
             android:insetRight="10dp"
             android:text="NEXT"
@@ -50,7 +50,7 @@
             android:id="@+id/GoButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="#40DFFF"
+            android:backgroundTint="#98ED89"
             android:insetLeft="10dp"
             android:insetRight="10dp"
             android:text="GO"
@@ -63,9 +63,9 @@
         android:layout_height="531dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.212" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
