--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="colorPrimary">#acdda3</color>
+    <color name="colorPrimaryVariant">#bce3b5</color>
+    <color name="deepBlue">#00008B</color>
 </resources>
