--- a/app/src/main/res/layout/activity_aboutme.xml
+++ b/app/src/main/res/layout/activity_aboutme.xml
@@ -42,16 +42,16 @@
                 android:layout_height="36dp"
                 android:ems="10"
                 android:inputType="textPersonName"
-                android:text="Name"
+                android:text="Name:"
                 android:textSize="20dp"
-                android:textStyle="italic" />
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/NameFillText"
                 android:layout_width="match_parent"
                 android:layout_height="33dp"
                 android:textSize="20dp"
-                android:textStyle="italic" />
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/EmailText"
@@ -59,16 +59,16 @@
                 android:layout_height="36dp"
                 android:ems="10"
                 android:inputType="textEmailAddress"
-                android:text="email"
+                android:text="Email:"
                 android:textSize="20dp"
-                android:textStyle="italic" />
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/EmailFillText"
                 android:layout_width="331dp"
                 android:layout_height="34dp"
                 android:textSize="20dp"
-                android:textStyle="italic" />
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/BalanceText"
@@ -76,16 +76,16 @@
                 android:layout_height="36dp"
                 android:ems="10"
                 android:inputType="textPersonName"
-                android:text="Balance"
+                android:text="Balance:"
                 android:textSize="20dp"
-                android:textStyle="italic" />
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/BalanceFillText"
                 android:layout_width="327dp"
                 android:layout_height="36dp"
                 android:textSize="20dp"
-                android:textStyle="italic" />
+                android:textStyle="bold" />
 
             <LinearLayout
                 android:layout_width="331dp"
@@ -98,10 +98,10 @@
                     android:layout_height="48dp"
                     android:ems="10"
                     android:inputType="number"
-                    android:text="Amount" />
+                    android:hint="Amount" />
 
                 <Button
-                    android:id="@+id/topUpButton2"
+                    android:id="@+id/topUpButton"
                     android:layout_width="171dp"
                     android:layout_height="50dp"
                     android:layout_weight="1"
@@ -261,14 +261,14 @@
                 android:inputType="textPersonName"
                 android:text="Name"
                 android:textSize="20dp"
-                android:textStyle="italic" />
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/RenterNameFillText"
                 android:layout_width="match_parent"
                 android:layout_height="33dp"
                 android:textSize="20dp"
-                android:textStyle="italic" />
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/AddressText"
@@ -276,16 +276,16 @@
                 android:layout_height="36dp"
                 android:ems="10"
                 android:inputType="text"
-                android:text="Address"
+                android:text="Address:"
                 android:textSize="20dp"
-                android:textStyle="italic" />
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/AddressFillText"
                 android:layout_width="331dp"
                 android:layout_height="34dp"
                 android:textSize="20dp"
-                android:textStyle="italic" />
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/PhoneNumberText"
@@ -293,16 +293,16 @@
                 android:layout_height="36dp"
                 android:ems="10"
                 android:inputType="textPersonName"
-                android:text="Phone Number"
+                android:text="Phone Number:"
                 android:textSize="20dp"
-                android:textStyle="italic" />
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/PhoneNumberFillText"
                 android:layout_width="327dp"
                 android:layout_height="36dp"
                 android:textSize="20dp"
-                android:textStyle="italic" />
+                android:textStyle="bold" />
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
