--- a/app/src/main/res/layout/activity_detail_room.xml
+++ b/app/src/main/res/layout/activity_detail_room.xml
@@ -45,7 +45,7 @@
                 android:inputType="textPersonName"
                 android:text="Name"
                 android:textSize="20dp"
-                android:textStyle="italic" />
+                android:textStyle="bold|italic" />
 
             <TextView
                 android:id="@+id/NameFillText"
@@ -62,7 +62,7 @@
                 android:inputType="textEmailAddress"
                 android:text="Bed Type"
                 android:textSize="20dp"
-                android:textStyle="italic" />
+                android:textStyle="bold|italic" />
 
             <TextView
                 android:id="@+id/BedTypeFillText"
@@ -79,7 +79,7 @@
                 android:inputType="textPersonName"
                 android:text="Size"
                 android:textSize="20dp"
-                android:textStyle="italic" />
+                android:textStyle="bold|italic" />
 
             <TextView
                 android:id="@+id/SizeFillText"
@@ -96,7 +96,7 @@
                 android:inputType="textPersonName"
                 android:text="Price"
                 android:textSize="20dp"
-                android:textStyle="italic" />
+                android:textStyle="bold|italic" />
 
             <TextView
                 android:id="@+id/PriceFillText"
@@ -113,7 +113,7 @@
                 android:inputType="textPersonName"
                 android:text="Address"
                 android:textSize="20dp"
-                android:textStyle="italic" />
+                android:textStyle="bold|italic" />
 
             <TextView
                 android:id="@+id/RoomAddressFillText"
